--- a/src/main.scss
+++ b/src/main.scss
@@ -1,120 +1,29 @@
-/*Обнуление*/
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-:focus,
-:active {
-  outline: none;
-}
-a:focus,
-a:active {
-  outline: none;
-}
-
-nav,
-footer,
-header,
-aside {
-  display: block;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-input,
-button,
-textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-button {
-  cursor: pointer;
-}
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-a,
-a:visited {
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: none;
-}
-ul li {
-  list-style: none;
-}
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: 400;
-}
-/*--------------------*/
-
-.bigred {
-  font-size: 20px;
-  color: red;
-}
-
-body {
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 15px;
-  max-width: 1230px;
-  position: relative;
-
-  &-lg {
-    width: 100%;
-  }
-
-  &--area {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-  }
-}
-
-a {
-  text-decoration: none;
-}
-
+@import "mixin";
+@import "variables.scss";
+@import "normalize.scss";
 @import "header.scss";
-@import "top-area.scss";
-@import "body.scss";
-@import "footer.scss";
+@import "block.scss";
+@import "flex-box.scss";
+
+body {
+  // background-color: #f7fffa;
+  background-image: url(/images/bg-repeat.jpg);
+  // background-attachment: fixed;
+}
+
+h1 {
+  font-size: 60px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #3e694d;
+}
+h2 {
+  font-size: 40px;
+  color: #4a173c;
+  margin: 50px 0;
+}
+p {
+  color: #3e694d;
+  font-size: 25px;
+  line-height: 50px;
+}
