--- a/src/block.scss
+++ b/src/block.scss
@@ -1,43 +1,33 @@
 .section {
-  padding: 15px 40px 40px 40px;
+  padding: 40px 40px 40px 40px;
   position: relative;
   margin: 35px 0;
   border-radius: 10px;
   width: 100%;
 
   &-yellow {
-    @include sectionColors($yellow, $yellow-border, $yellow-dark);
-    p {
-      color: #735b39;
-    }
+    @include sectionColors($yellow, $yellow-border, $yellow-dark, $yellow-font);
   }
 
   &-pink {
-    @include sectionColors($pink, $pink-border, $pink-dark);
-    p {
-      color: #752760;
-    }
+    @include sectionColors($pink, $pink-border, $pink-dark, $pink-font);
   }
 
   &-blue {
-    @include sectionColors($blue, $blue-border, $blue-dark);
-    p {
-      color: #315175;
-    }
+    @include sectionColors($blue, $blue-border, $blue-dark, $blue-font);
   }
 
   &-lavander {
-    @include sectionColors($lavander, $lavander-border, $lavander-dark);
-    p {
-      color: #593175;
-    }
+    @include sectionColors(
+      $lavander,
+      $lavander-border,
+      $lavander-dark,
+      $lavander-font
+    );
   }
 
   &-mint {
-    @include sectionColors($mint, $mint-border, $mint-dark);
-    p {
-      color: #316949;
-    }
+    @include sectionColors($mint, $mint-border, $mint-dark, $mint-font);
   }
 }
 
