--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -2,8 +2,11 @@
   box-shadow: -6px 6px 11px -4px $color;
 }
 
-@mixin sectionColors($bg-color, $border, $box-shadow) {
+@mixin sectionColors($bg-color, $border, $box-shadow, $font-color) {
   background-color: $bg-color;
   border: 1px solid $border;
   box-shadow: -6px 6px 11px -4px $box-shadow;
+  p {
+    color: $font-color;
+  }
 }
