--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,19 +1,24 @@
 $yellow: #ffffbf;
 $yellow-border: #f0ee5d;
 $yellow-dark: rgba(189, 164, 24, 1);
+$yellow-font: #735b39;
 
 $pink: #ffbffd;
 $pink-border: #ffa3f4;
 $pink-dark: rgba(168, 24, 189, 1);
+$pink-font: #752760;
 
 $blue: #bfeeff;
 $blue-border: #a3f6ff;
 $blue-dark: rgba(24, 88, 189, 1);
+$blue-font: #315175;
 
 $lavander: #ddbfff;
 $lavander-border: #c9a3ff;
 $lavander-dark: rgba(108, 24, 189, 1);
+$lavander-font: #593175;
 
 $mint: #bfffe9;
 $mint-border: #a3fff4;
 $mint-dark: rgba(24, 189, 161, 1);
+$mint-font: #316949;
