--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -31,7 +31,8 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-family: "Grandstander", cursive;
+  // font-family: "Grandstander", cursive;
+  font-family: "Montserrat Alternates", sans-serif;
   font-size: 100%;
   line-height: 1;
   font-size: 14px;
