--- a/src/flex-box.scss
+++ b/src/flex-box.scss
@@ -1,11 +1,11 @@
-.cavet {
-  font-family: "Caveat", cursive;
-  font-size: 50px;
-  margin: 30px 0;
-}
+// .cavet {
+//   font-family: "Caveat", cursive;
+//   font-size: 50px;
+//   margin: 30px 0;
+// }
 
 span {
-  font-family: "Grandstander", cursive;
+  font-weight: 400;
   font-size: 40px;
   color: #000000;
   text-decoration: underline $blue-border;
