--- a/src/main.scss
+++ b/src/main.scss
@@ -5,8 +5,10 @@
 @import "flex-box";
 
 body {
-  background-color: #f7fffa;
-  background-image: url(/images/bg-repeat.jpg);
+  // background-color: #ffe4df;
+  background-color: #f7f1fc;
+  font-family: "Roboto", sans-serif;
+  // background-image: url(/images/bg-repeat.jpg);
   // background-attachment: fixed;
 }
 
@@ -18,14 +20,14 @@ h1 {
   color: #195441;
 }
 h2 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 500;
   color: #4a173c;
-  margin: 50px 0;
+  margin: 20px 0;
 }
 p {
   color: #3e694d;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 50px;
 }
 
