--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,4 @@
-$yellow: #ffffbf;
+$yellow: #fff2c4;
 $yellow-border: #f0ee5d;
 $yellow-dark: rgba(189, 164, 24, 1);
 $yellow-font: #735b39;
@@ -13,12 +13,12 @@ $blue-border: #a3f6ff;
 $blue-dark: rgba(24, 88, 189, 1);
 $blue-font: #315175;
 
-$lavander: #ddbfff;
+$lavander: #cbb1e1;
 $lavander-border: #c9a3ff;
 $lavander-dark: rgba(108, 24, 189, 1);
 $lavander-font: #593175;
 
-$mint: #bfffe9;
+$mint: #b2e7c4;
 $mint-border: #a3fff4;
 $mint-dark: rgba(24, 189, 161, 1);
 $mint-font: #316949;
