add page with waves button

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 @import "normalize";
 @import "block";
 @import "flex-box";
+@import "animation-button.scss";
 
 body {
   // background-color: #ffe4df;
