--- a/src/flex-box.scss
+++ b/src/flex-box.scss
@@ -8,7 +8,7 @@ span {
   font-weight: 400;
   font-size: 40px;
   color: #000000;
-  text-decoration: underline $blue-border;
+  text-decoration: underline $yellow;
 }
 
 .text-decoration {
