--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -32,7 +32,7 @@ body {
   height: 100%;
   width: 100%;
   // font-family: "Grandstander", cursive;
-  font-family: "Montserrat Alternates", sans-serif;
+  font-family: 'Nanum Gothic', sans-serif;
   font-size: 100%;
   line-height: 1;
   font-size: 14px;
